# vorynth

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-details.md  tsconfig.base.json
.agents/skills/backup/: SKILL.md
.agents/skills/changelog/: SKILL.md
.agents/skills/changelog/references/: codenames.md
.agents/skills/no-auto-commit/: SKILL.md
.agents/skills/standard-packages/: SKILL.md
.github/workflows/: ci.yml  package.yml  pages.yml
.zcode/plans/: plan-sess_0c8154f0-b8b5-43e0-a1fd-3a5e155ca008.md  plan-sess_7917bd54-8337-4217-8980-c3d7ec3537a9.md  plan-sess_90936216-8746-403e-8781-6cc04d374844.md  plan-sess_a923f5c7-e773-4c2e-8904-948d91456b23.md  plan-sess_c3885f9e-ad91-4e7b-80b1-a02d339c7cef.md  plan-sess_ce3b0ab7-b475-4071-8014-445399fe17a7.md  plan-sess_da2e918b-abdc-4440-9de6-16c5f24b4662.md  plan-sess_e2406556-d537-486a-b817-8e10254f65ae.md  plan-sess_f9a9a5a7-d6e1-4c53-b89a-6e81eb3d9319.md
apps/core-engine/: .env.example  drizzle.config.ts  langgraph.json  package.json  tsconfig.json  tsconfig.ncc.json
apps/core-engine/scripts/: bundle-sidecar.mjs
apps/core-engine/src/: app.module.ts  main.ts
apps/core-engine/src/db/: database.service.ts  db.module.ts  ddl.ts  fts-schema.ts  fts-sync.ts  migrate.ts  paths.ts  schema.ts  seed.ts
apps/core-engine/src/search/: text-normalizer.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: App.tsx  ErrorBoundary.tsx  ShellLayout.tsx
apps/desktop/src/i18n/: en.ts  index.ts  instance.ts  locale-store.ts  types.ts
apps/desktop/src/lib/: cn.ts
apps/desktop/src/pages/: AnalyzingPage.tsx  ArticleDetailPage.tsx  BriefPage.tsx  ChangelogPage.tsx  DesignSystemPage.tsx  HistoryBriefDetailPage.tsx  HistoryGeneratedDetailPage.tsx  MediaPage.tsx  (+7 more)
docs/: GUIDE.md  index.html
examples/: analyzing-intelligence.html  application-settings.html  intelligence-detail.html  source-management.html  today-brief.html  welcome.html
examples/colors/: vorynth-dark.md  vorynth-light.md
examples/cursor-langgraph-starter-main/: .gitignore  .prettierrc  README.md  env.example  eslint.config.js  langgraph.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
examples/cursor-langgraph-starter-main/src/: index.ts
examples/cursor-langgraph-starter-main/tests/: workflow.test.ts
scripts/: version-sync.mjs
(+126 files in other folders)
