[package]
name = "vorynth-desktop"
version = "1.5.0"
description = "Vorynth — local-first personal intelligence engine"
authors = ["Vorynth"]
license = "MIT"
repository = ""
default-run = "vorynth-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[lib]
name = "vorynth_desktop"
crate-type = ["cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]
