[package]
name = "vorynth-desktop"
version = "1.5.0"
description = "Vorynth — local-first personal intelligence engine"
authors = ["Vorynth"]
license = "MIT"
repository = ""
default-run = "vorynth-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Pure-Rust deps shared by the desktop shell (main.rs) and the OHOS native
# bridge (lib.rs) — these cross-compile cleanly for every target.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Desktop-only deps. Tauri pulls in gtk/glib/webkit2gtk on Linux-family
# targets — none of which exist in the OHOS NDK sysroot — so this whole
# group is excluded when cross-compiling for aarch64-unknown-linux-ohos
# (target_env = "ohos"). lib.rs has zero Tauri usage; see its module docs.
[target.'cfg(not(target_env = "ohos"))'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

[lib]
name = "vorynth_desktop"
crate-type = ["cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]
